ok so now scrollbars are fixed.

--- a/fallprevention/app/static/css/exam.css
+++ b/fallprevention/app/static/css/exam.css
@@ -49,7 +49,4 @@ p{
   .checkbox label{
          font-size: 16px;
      }
-::-webkit-scrollbar {
-    width: 0px;  /* remove scrollbar space */
-    background: transparent;  /* optional: just make scrollbar invisible */
-}
+
